# score-snatcher

./: .gitignore  README.md  main.py  makefile  pyproject.toml
src/: constants.py  utils.py  video_to_pdf.py  video_to_screenshots.py  youtube_downloader.py  youtube_to_pdf.py
src/score_snatcher/: config_manager.py  constants.py  video_to_screenshots.py  youtube_downloader.py  youtube_to_pdf.py
src/score_snatcher/configs/: config.yaml  song_config.csv  song_config_test.csv
tests/: conftest.py  test_config_manager.py
