[project]
name = "score-snatcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "logging>=0.4.9.6",
    "pydantic>=2.12.3",
    "pyyaml>=6.0.3",
    "yt-dlp>=2025.10.14",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.1",
]


[[tool.mypy.overrides]]
module = ["yaml.*"]
follow_untyped_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
